--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -1,3 +1,4 @@
-$primary-font: Helvetica,
-sans-serif;
+$primary-font: Helvetica, sans-serif;
 $primary-color: #333;
+$active-rating-color: #ffca08;
+$inactive-rating-color: #222222;
