--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,25 +1,1 @@
-@import "modules/base";
-.starrating > input {
-  display: none;
-} /* Remove radio buttons */
-
-.starrating > label:before {
-  content: "\f005"; /* Star */
-  margin: 2px;
-  font-size: 2em;
-  font-family: FontAwesome;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.starrating > label {
-  color: #222222; /* Start color when not clicked */
-}
-
-.starrating > input:checked ~ label {
-  color: #ffca08;
-} /* Set yellow color when star checked */
-
-.starrating > input:hover ~ label {
-  color: #ffca08;
-} /* Set yellow color when star hover */
+@import 'modules/base';
